@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.41
-releasedate		20050104
+releasedate		20050105
 
 ##############################################################################
 # host dependent configuration
