@@ -1046,7 +1046,8 @@ them by yourself...<br>&nbsp;
             </tr>
             <tr>
               <td nowrap> Cool3D.Deutsch</td>
-              <td>08/05/2002 <a href="#email" title="beckerr.AT.fh-trier.de">Ralf Becker</a></td>
+              <td>01/05/2005 <a href="#email" title="Martin.AT.Bronk.de">Martin Bronk</a>,<br>
+                  08/05/2002 <a href="#email" title="beckerr.AT.fh-trier.de">Ralf Becker</td>
             </tr>
             <tr>
               <td nowrap>Cool3D.Dutch</td>
